# tos

./: .gitignore  Makefile  README.md  main.py  pyproject.toml
sampledata/docs/: about.html  index.html
scripts/: seed_db.py
tos/: chunk.py  db.py  html_dump_processor.py  rag.py  rag_pdf_simple.py  utils.py
tos/notebooks/: Ollama.ipynb
