[project]
name = "tos"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "chromadb>=1.0.9",
    "html2text>=2025.4.15",
    "jupyterlab>=4.4.2",
    "ollama>=0.4.8",
    "openai>=1.81.0",
    "pandas>=2.2.3",
    "pydantic>=2.11.4",
    "pypdf2>=3.0.1",
    "streamlit>=1.45.1",
    "tqdm>=4.67.1",
]
